# bezier

./: CMakeLists.txt  README.md  main.cpp  widget.cpp  widget.h
