CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(bezier)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTOMOC ON)

SET(CMAKE_CXX_FLAGS "-O3 -no-pie")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED)

LINK_LIBRARIES(Qt5::Widgets)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
	main.cpp
	widget.cpp
	widget.h
	widget.ui
)
